# inotify-sys

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  build.rs
.github/workflows/: ci.yml
src/: lib.rs
