[package]
name    = "inotify-sys"
version = "0.1.5"
authors = ["Hanno Braun <hb@hannobraun.de>"]

description   = "inotify bindings for the Rust programming language"
documentation = "https://docs.rs/inotify-sys"
repository    = "https://github.com/hannobraun/inotify-sys"
license       = "ISC"
readme        = "README.md"

keywords   = ["inotify", "linux"]
categories = ["external-ffi-bindings", "filesystem"]
exclude    = ["/.travis.yml", "/inotify-sys.sublime-project"]

[badges]
travis-ci = { repository = "inotify-rs/inotify-sys" }

[dependencies]
libc = "0.2"
