[package]
name    = "inotify-sys"
version = "0.1.6"
authors = ["Hanno Braun <hb@hannobraun.de>"]

description   = "inotify bindings for the Rust programming language"
documentation = "https://docs.rs/inotify-sys"
repository    = "https://github.com/hannobraun/inotify-sys"
license       = "ISC"
readme        = "README.md"
build         = "build.rs"

keywords   = ["inotify", "linux", "freebsd", "bsd"]
categories = ["external-ffi-bindings", "filesystem"]
exclude    = ["/.travis.yml", "/inotify-sys.sublime-project"]

[features]
# Skip linking the userspace `libinotify` shim on FreeBSD and rely on the
# inotify(2) wrappers provided by libc on FreeBSD 14.4+.
freebsd-native = []

[dependencies]
libc = "0.2"
